change package names

--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "sanity-gatsby-portfolio-web",
+  "name": "ainc-gatsby-sanity-web",
   "version": "1.0.3",
   "author": "Sanity <hello@sanity.io>",
   "scripts": {
