--- a/web/package.json
+++ b/web/package.json
@@ -12,18 +12,35 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "@fontsource/exo": "^4.5.8",
+    "@fontsource/exo-2": "^4.5.8",
+    "@fontsource/open-sans": "^4.5.10",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@portabletext/react": "^1.0.1",
     "@sanity/image-url": "^1.0.1",
+    "@svgr/webpack": "^6.2.1",
+    "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "gatsby": "^4.6.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-postcss": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
-    "gatsby-source-sanity": "^7.3.2",
+    "gatsby-plugin-react-svg": "^3.1.0",
+    "gatsby-plugin-sass": "^5.17.0",
+    "gatsby-plugin-sharp": "^4.17.0",
+    "gatsby-source-filesystem": "^4.17.0",
+    "gatsby-source-sanity": "^7.4.2",
+    "keen-slider": "^6.7.0",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sass": "^1.53.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "dotenv": "^15.0.0",
