--- a/web/package.json
+++ b/web/package.json
@@ -33,6 +33,7 @@
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-source-filesystem": "^4.17.0",
     "gatsby-source-sanity": "^7.4.2",
+    "hero-slider": "^2.0.3",
     "keen-slider": "^6.7.0",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
