--- a/web/package.json
+++ b/web/package.json
@@ -25,7 +25,6 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "gatsby": "^4.19.0",
-    "gatsby-plugin-feed": "^4.19.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-postcss": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
@@ -33,6 +32,7 @@
     "gatsby-plugin-sass": "^5.17.0",
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-source-filesystem": "^4.17.0",
+    "gatsby-source-rss-feed": "^1.2.2",
     "gatsby-source-sanity": "^7.4.2",
     "hero-slider": "^2.0.3",
     "keen-slider": "^6.7.0",
