--- a/web/.env.production
+++ b/web/.env.production
@@ -1,2 +1,2 @@
-GATSBY_SANITY_PROJECT_ID="y716vocf"
+GATSBY_SANITY_PROJECT_ID=process.env.GATSBY_SANITY_PROJECT_ID
 GATSBY_SANITY_DATASET="production"
