--- a/web/.env.development.template
+++ b/web/.env.development.template
@@ -1,4 +1,4 @@
-GATSBY_SANITY_PROJECT_ID="y716vocf"
+GATSBY_SANITY_PROJECT_ID=process.env.SANITY_STUDIO_API_PROJECT_ID
 GATSBY_SANITY_DATASET="production"
 
 # Copy this file to .env.development for local development.
