--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,8 @@
     "dev": "gatsby develop",
     "lint": "eslint .",
     "format": "prettier-eslint --write \"**/*.js\" \"!.cache/**\" \"!node_modules/**\" \"!public/**\"",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
+    "svgrscript": "svgr -d /src/assets/svg/ /src/assets/icons/"
   },
   "dependencies": {
     "@fontsource/exo": "^4.5.8",
@@ -21,6 +22,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@portabletext/react": "^1.0.1",
     "@sanity/image-url": "^1.0.1",
+    "@svgr/cli": "^6.3.1",
     "@svgr/webpack": "^6.2.1",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
