--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lerna": "^4.0.0"
   },
   "dependencies": {
+    "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-source-rss-feed": "^1.2.2",
     "svgo": "^2.8.0"
   },
