--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "gatsby-awesome-pagination": "^0.3.8",
+    "gatsby-plugin-react-svg": "^3.1.0",
     "gatsby-source-rss-feed": "^1.2.2",
     "svgo": "^2.8.0"
   },
