--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "lerna run dev --parallel",
     "format": "lerna run format",
     "build-studio": "(cd studio && npm run build)",
-    "build-web": "lerna bootstrap --no-ci && (cd studio && SANITY_AUTH_TOKEN=$SANITY_DEPLOY_STUDIO_TOKEN sanity dataset export production ./production.tar.gz npm run graphql-deploy) && (cd web && npm run build)",
+    "export-db": "cd studio && SANITY_AUTH_TOKEN=$SANITY_DEPLOY_STUDIO_TOKEN sanity dataset export production ./production.tar.gz",
+    "build-web": "lerna bootstrap --no-ci && (cd studio && SANITY_AUTH_TOKEN=$SANITY_DEPLOY_STUDIO_TOKEN npm run graphql-deploy) && (cd web && npm run build)",
     "graphql-deploy": "lerna run graphql-deploy",
     "lint": "lerna run lint",
     "postinstall": "lerna bootstrap",
