--- a/web/package.json
+++ b/web/package.json
@@ -17,10 +17,6 @@
     "@fontsource/exo": "^4.5.8",
     "@fontsource/exo-2": "^4.5.8",
     "@fontsource/open-sans": "^4.5.10",
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@portabletext/react": "^1.0.1",
     "@sanity/image-url": "^1.0.1",
     "@svgr/cli": "^6.3.1",
@@ -28,6 +24,7 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
     "gatsby": "^4.24.4",
+    "gatsby-plugin-fontawesome-css": "^1.2.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-postcss": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
@@ -44,6 +41,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.7.1",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5"
   },
