--- a/web/package.json
+++ b/web/package.json
@@ -40,6 +40,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-eventbrite-popup-checkout": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "sass": "^1.53.0",
