--- a/studio/package.json
+++ b/studio/package.json
@@ -13,6 +13,7 @@
     "test": "sanity check"
   },
   "dependencies": {
+    "@portabletext/react": "^2.0.2",
     "@sanity/base": "^2.22.0",
     "@sanity/cli": "^2.30.6",
     "@sanity/components": "^2.14.0",
