--- a/studio/package.json
+++ b/studio/package.json
@@ -29,9 +29,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.7",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "sanity-plugin-autocomplete-tags": "^1.0.2",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
     "sanity-plugin-dashboard-widget-netlify": "^1.2.1",
+    "sanity-plugin-markdown": "^2.1.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
