--- a/web/package.json
+++ b/web/package.json
@@ -39,11 +39,12 @@
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^17.0.2",
     "react-eventbrite-popup-checkout": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
-    "sass": "^1.53.0",
+    "sass": "^1.64.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
