--- a/studio/package.json
+++ b/studio/package.json
@@ -23,6 +23,7 @@
     "@sanity/ui": "^1.7.7",
     "@sanity/vision": "^3.15.1",
     "date-fns": "^2.27.0",
+    "easymde": "^2.18.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,7 +35,8 @@
     "sanity-plugin-autocomplete-tags": "^1.0.2",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.13",
     "sanity-plugin-dashboard-widget-netlify": "^1.2.1",
-    "sanity-plugin-markdown": "^2.1.2",
+    "sanity-plugin-markdown": "^4.1.0",
+    "sanity-plugin-tags": "^2.0.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
