--- a/web/package.json
+++ b/web/package.json
@@ -24,16 +24,16 @@
     "bootstrap": "^5.3.1",
     "date-fns": "^2.28.0",
     "gatsby": "^5.9.0",
+    "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-postcss": "^6.11.0",
     "gatsby-plugin-react-helmet": "^6.11.0",
+    "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-sass": "^6.11.0",
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-source-rss-feed": "^1.2.2",
     "gatsby-source-sanity": "^7.8.0",
-    "gatsby-awesome-pagination": "^0.3.8",
-    "gatsby-plugin-react-svg": "^3.3.0",
     "hero-slider": "^3.1.0",
     "keen-slider": "^6.7.0",
     "moment": "^2.29.4",
@@ -44,6 +44,9 @@
     "react-eventbrite-popup-checkout": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.7",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5"
   },
