add block content to react package

--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "@fontsource/exo-2": "^4.5.8",
     "@fontsource/open-sans": "^4.5.10",
     "@portabletext/react": "^1.0.1",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/image-url": "^1.0.1",
     "@svgr/cli": "^6.3.1",
     "@svgr/webpack": "^6.2.1",
