--- a/studio/package.json
+++ b/studio/package.json
@@ -17,13 +17,14 @@
     "@portabletext/react": "^2.0.2",
     "@sanity/cli": "^3.15.1",
     "@sanity/components": "^2.14.0",
-    "@sanity/dashboard": "^2.22.0",
-    "@sanity/structure": "^2.22.0",
-    "@sanity/studio-hints": "^2.21.10",
-    "@sanity/ui": "^1.7.7",
-    "@sanity/vision": "^3.15.1",
+    "@sanity/dashboard": "^3.1.5",
+    "@sanity/structure": "^2.36.2",
+    "@sanity/studio-hints": "^2.35.3",
+    "@sanity/ui": "^1.8.2",
+    "@sanity/vision": "^3.16.2",
     "date-fns": "^2.27.0",
     "easymde": "^2.18.0",
+    "jsdom": "^22.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
