--- a/studio/package.json
+++ b/studio/package.json
@@ -24,6 +24,9 @@
     "@sanity/vision": "^3.16.2",
     "date-fns": "^2.27.0",
     "easymde": "^2.18.0",
+    "front-matter": "^4.0.2",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "jsdom": "^22.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
