--- a/web/package.json
+++ b/web/package.json
@@ -51,6 +51,7 @@
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "sass": "^1.53.0",
+    "sharp": "^0.33.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
