--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,9 @@
     "date-fns": "^2.28.0",
     "gatsby": "^5.9.0",
     "gatsby-awesome-pagination": "^0.3.8",
+    "gatsby-plugin-gatsby-cloud": "^5.12.2",
     "gatsby-plugin-image": "^3.11.0",
+    "gatsby-plugin-netlify": "^5.1.1",
     "gatsby-plugin-postcss": "^6.11.0",
     "gatsby-plugin-react-helmet": "^6.11.0",
     "gatsby-plugin-react-svg": "^3.3.0",
