--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^2.28.0",
     "gatsby": "^5.9.0",
     "gatsby-awesome-pagination": "^0.3.8",
+    "gatsby-codemods": "^4.12.0",
     "gatsby-plugin-gatsby-cloud": "^5.12.2",
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-netlify": "^5.1.1",
