--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.21.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "sass": "^1.53.0",
