add fade transition router

--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@fontsource/exo": "^4.5.8",
     "@fontsource/exo-2": "^4.5.8",
     "@fontsource/open-sans": "^4.5.10",
+    "@gatsbyjs/reach-router": "^2.0.1",
     "@portabletext/react": "^1.0.1",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/image-url": "^1.0.1",
