--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@svgr/webpack": "^6.2.1",
     "bootstrap": "^5.3.1",
     "date-fns": "^2.28.0",
+    "framer-motion": "^11.0.3",
     "gatsby": "^5.9.0",
     "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-codemods": "^4.12.0",
