--- a/web/package.json
+++ b/web/package.json
@@ -57,9 +57,13 @@
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.21.0",
+    "react-slick": "^0.30.2",
+    "react-spring": "^9.7.3",
+    "react-use-gesture": "^9.1.3",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "sass": "^1.53.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
