--- a/web/.env.development
+++ b/web/.env.development
@@ -1,5 +1,5 @@
 GATSBY_SANITY_PROJECT_ID=process.env.SANITY_STUDIO_API_PROJECT_ID
-GATSBY_SANITY_DATASET="production"
+GATSBY_SANITY_DATASET="development"
 
 # Copy this file to .env.development for local development.
 # Note: After copying DO NOT commit this file to git!
