--- a/studio/package.json
+++ b/studio/package.json
@@ -24,6 +24,17 @@
     "@sanity/vision": "^3.16.2",
     "date-fns": "^2.27.0",
     "easymde": "^2.18.0",
+    "gatsby": "2.13.57",
+    "gatsby-codemods": "1.6.0",
+    "gatsby-plugin-gatsby-cloud": "1.0.2",
+    "gatsby-plugin-image": "0.7.2",
+    "gatsby-plugin-netlify": "2.11.1",
+    "gatsby-plugin-postcss": "3.7.0",
+    "gatsby-plugin-react-helmet": "3.10.0",
+    "gatsby-plugin-sass": "3.2.0",
+    "gatsby-plugin-sharp": "2.14.4",
+    "gatsby-source-filesystem": "2.11.1",
+    "gatsby-source-sanity": "7.6.0",
     "http-proxy-agent": "^7.0.2",
     "jsdom": "^22.1.0",
     "prop-types": "^15.8.1",
@@ -52,6 +63,6 @@
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-standard": "^5.0.0",
-    "prettier-eslint-cli": "^5.0.1"
+    "prettier-eslint-cli": "^8.0.1"
   }
 }
