--- a/web/package.json
+++ b/web/package.json
@@ -48,6 +48,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-calendly": "^4.3.0",
+    "react-chrono": "^2.6.1",
     "react-countdown": "^2.3.5",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
