API call fires but returns a 403 error

--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.3.1",
     "date-fns": "^2.28.0",
     "framer-motion": "^11.0.3",
+    "gapi-script": "^1.2.0",
     "gatsby": "^5.9.0",
     "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-codemods": "^4.12.0",
@@ -41,6 +42,7 @@
     "gatsby-source-rss-feed": "^1.2.2",
     "gatsby-source-sanity": "^7.8.0",
     "hero-slider": "^3.1.0",
+    "husky": "^9.1.7",
     "keen-slider": "^6.7.0",
     "mini-css-extract-plugin": "^2.7.6",
     "moment": "^2.29.4",
@@ -53,6 +55,7 @@
     "react-dom": "^18.2.0",
     "react-eventbrite-popup-checkout": "^2.0.8",
     "react-facebook": "^9.0.12",
+    "react-google-calendar-api": "^2.3.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
     "react-markdown": "^8.0.7",
