--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "@fontsource/open-sans": "^4.5.10",
     "@gatsbyjs/reach-router": "^2.0.1",
     "@portabletext/react": "^1.0.1",
+    "@react-google-maps/api": "^2.20.6",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/image-url": "^1.0.1",
     "@svgr/cli": "^6.3.1",
