--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "gatsby build",
     "clean-cache": "gatsby clean",
-    "dev": "gatsby develop",
+    "dev": "NODE_OPTIONS=\"--max-old-space-size=4096\" gatsby develop",
     "lint": "eslint .",
     "format": "prettier-eslint --write \"**/*.js\" \"!.cache/**\" \"!node_modules/**\" \"!public/**\"",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
@@ -42,6 +42,7 @@
     "gatsby-source-google-spreadsheets": "^3.0.9",
     "gatsby-source-rss-feed": "^1.2.2",
     "gatsby-source-sanity": "^7.8.0",
+    "googleapis": "^148.0.0",
     "hero-slider": "^3.1.0",
     "keen-slider": "^6.7.0",
     "mini-css-extract-plugin": "^2.7.6",
@@ -61,6 +62,7 @@
     "react-router-dom": "^6.21.0",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
+    "react-toastify": "^11.0.5",
     "react-use-gesture": "^9.1.3",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
