--- a/web/package.json
+++ b/web/package.json
@@ -48,12 +48,12 @@
     "mini-css-extract-plugin": "^2.7.6",
     "moment": "^2.29.4",
     "postcss": "^8.4.5",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.8.0",
     "react-calendly": "^4.3.0",
+    "react-chrono": "^2.9.1",
     "react-countdown": "^2.3.5",
     "react-countdown-circle-timer": "^3.2.1",
-    "react-dom": "^18.2.0",
     "react-eventbrite-popup-checkout": "^2.0.8",
     "react-facebook": "^9.0.12",
     "react-helmet": "^6.1.0",
