--- a/studio/netlify.toml
+++ b/studio/netlify.toml
@@ -2,3 +2,9 @@
   from = "/*"
   to = "/"
   status = 200
+
+[[redirects]]
+  from = "/vote"
+  to = "https://www.menti.com/al1qz8js1e1j"
+  status = 301
+  force = true
